# Pandemonio

./: .gitignore  CMakeLists.txt  README.md  main-old.pd  main.pd
Extras/: Pitches.opat  chords.txt  poema-phrases.txt  poema.txt
Libs/: Engine.pd  poema.txt
Pd4Web/: config.h  externals.cpp  pd4web.cpp
WebPatch/: index.html  index.pd  pd4web.data  pd4web.gui.js  pd4web.js  pd4web.wasm
